[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "omniproxy"
dynamic = ["version"]
description = "Use a proxy as a string, but achieve broad functionality for various scenarios"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Mfdi", email = "mfdisanchez@gmail.com" }
]
keywords = ["proxy", "http", "socks", "scraping", "automation", "uv"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "msgspec>=0.10",
    "orjson>=3.10",
]

[project.optional-dependencies]
httpx = [
    "httpx>=0.27",
    "httpx-socks>=0.9",
]
aiohttp = [
    "aiohttp>=3.9",
    "aiohttp-socks>=0.8",
]
requests = [
    "requests>=2.31",
]
curl_cffi = [
    "curl-cffi>=0.6",
]
tls_client = [
    "tls-client>=1.0",
]
re2 = [
    "google-re2>=1.0",
]
all = [
    "httpx>=0.27",
    "httpx-socks>=0.9",
    "aiohttp>=3.9",
    "aiohttp-socks>=0.8",
    "requests>=2.31",
    "curl-cffi>=0.6",
    "tls-client>=1.0",
    "google-re2>=1.0",
]

[dependency-groups]
httpx = [
    "httpx>=0.27",
    "httpx-socks>=0.9",
]

dev = [
    "pydantic>=2.10",
    "python-dotenv>=1.0.0",
    "pytest>=8.0",
    "mypy>=1.8",
    "ruff>=0.4",
    "mkdocs-material>=9.7.6",
    "mkdocstrings[python]>=1.0.3",
]

[project.urls]
Homepage = "https://github.com/mfdi/omniproxy"
Documentation = "https://mfdi.github.io/omniproxy/"
Repository = "https://github.com/mfdi/omniproxy"
Issues = "https://github.com/mfdi/omniproxy/issues"

[project.scripts]
omniproxy = "omniproxy.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["omniproxy"]

[tool.hatch.version]
path = "omniproxy/__init__.py"

[tool.uv]
default-groups = ["httpx", "dev"]

# =========================
# RUFF (lint + format)
# =========================
[tool.ruff]
line-length = 100
target-version = "py310"
src = ["omniproxy", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "C4",  # comprehensions
    "SIM", # simplify
    "ARG", # unused args
    "PIE", # misc improvements
    "RET", # return issues
    "RUF", # ruff-specific
]
ignore = [
    "E501", # handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ARG", "FBT"]
"omniproxy/backends/aiohttp_client.py" = ["SIM117"]
"omniproxy/client.py" = ["F822"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

# =========================
# MYPY (STRICT)
# =========================
[tool.mypy]
python_version = "3.10"

pretty = true
show_error_codes = true

ignore_missing_imports = true

check_untyped_defs = true
warn_unused_ignores = true
warn_unused_configs = true

# =========================
# PYTEST
# =========================
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q"
testpaths = ["tests"]
filterwarnings = [
    "error",
]
